# Zen.CppPropGen

./: CMakeLists.txt  README.md
cmake/Modules/: RunCppCheck.cmake
src/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  stdafx.h  template.in
